--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <!-- ====================================================================== -->
   <groupId>com.googlecode.htmlcompressor</groupId>
   <artifactId>htmlcompressor</artifactId>
-  <version>1.5.3-SNAPSHOT</version>
+  <version>1.5.3dev-SNAPSHOT</version>
   <packaging>jar</packaging>
   
   <!-- ====================================================================== -->
@@ -22,31 +22,34 @@
     <dependency>
       <groupId>com.google.javascript</groupId>
       <artifactId>closure-compiler</artifactId>
-      <version>r1043</version>
+      <version>v20160822</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>com.yahoo.platform.yui</groupId>
+      <artifactId>yuicompressor</artifactId>
+      <version>2.4.8</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>javax.servlet.jsp</groupId>
       <artifactId>jsp-api</artifactId>
-      <version>2.1</version>
-      <scope>provided</scope>
+      <version>2.2.1-b03</version>
     </dependency>
     <dependency>
       <groupId>org.apache.velocity</groupId>
       <artifactId>velocity-tools</artifactId>
       <version>2.0</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>com.yahoo.platform.yui</groupId>
-      <artifactId>yuicompressor</artifactId>
-      <version>2.4.6</version>
-      <optional>true</optional>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>19.0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8.2</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -68,7 +71,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
-        <version>1.0.1</version>
         <executions>
           <execution>
             <id>enforce-versions</id>
@@ -78,10 +80,10 @@
             <configuration>
               <rules>
                 <requireMavenVersion>
-                  <version>2.2.1</version>
+                  <version>3.3.9</version>
                 </requireMavenVersion>
                 <requireJavaVersion>
-                  <version>1.5</version>
+                  <version>1.8</version>
                 </requireJavaVersion>
               </rules>
             </configuration>
@@ -92,7 +94,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
+        <version>3.1</version>
         <configuration>
           <target>1.5</target>
           <encoding>UTF-8</encoding>
@@ -102,7 +104,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>2.3.1</version>
+        <version>2.4</version>
         <configuration>
           <archive>
             <manifest>
@@ -119,7 +121,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
-        <version>2.3.1</version>
+        <version>2.5.2</version>
         <configuration>
           <createChecksum>true</createChecksum>
         </configuration>
@@ -128,7 +130,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.1</version>
         <configuration>
           <mavenExecutorId>forked-path</mavenExecutorId>
 		  <connectionUrl>scm:svn:http://htmlcompressor.googlecode.com/svn/trunk/</connectionUrl>
@@ -137,7 +138,6 @@
 	  <!-- Assemble distribution package -->
 	  <plugin>
 	    <artifactId>maven-assembly-plugin</artifactId>
-	    <version>2.2.1</version>
 	    <configuration>
 	      <appendAssemblyId>false</appendAssemblyId>
 	      <descriptors>
@@ -149,7 +149,7 @@
 	  <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.8</version>
+        <version>2.10.4</version>
         <configuration>
           <show>public</show>
           <excludePackageNames>jargs</excludePackageNames>
@@ -167,12 +167,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>2.6</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.8</version>
         <configuration>
           <show>public</show>
           <excludePackageNames>jargs</excludePackageNames>
@@ -259,7 +257,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-			<version>1.3</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
@@ -280,7 +277,6 @@
           <!-- Copy javadocs -->
 		  <plugin>
 			<artifactId>maven-resources-plugin</artifactId>
-			<version>2.5</version>
 			<executions>
 			  <execution>
 				<id>copy-resources</id>
