--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,23 @@
   <artifactId>htmlcompressor</artifactId>
   <version>1.5.3dev-SNAPSHOT</version>
   <packaging>jar</packaging>
-  
+
+  <!-- ====================================================================== -->
+  <!-- Repositories                                                           -->
+  <!-- ====================================================================== -->
+  <repositories>
+    <repository>
+      <id>sonatype-oss-public</id>
+      <url>https://oss.sonatype.org/content/groups/public/</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <!-- ====================================================================== -->
   <!-- Dependencies                                                           -->
   <!-- ====================================================================== -->
@@ -52,6 +68,11 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.sanityinc</groupId>
+      <artifactId>jargs</artifactId>
+      <version>2.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   
   <!-- ====================================================================== -->
@@ -80,10 +101,10 @@
             <configuration>
               <rules>
                 <requireMavenVersion>
-                  <version>3.3.9</version>
+                  <version>3.0.5</version>
                 </requireMavenVersion>
                 <requireJavaVersion>
-                  <version>1.8</version>
+                  <version>1.7</version>
                 </requireJavaVersion>
               </rules>
             </configuration>
@@ -98,6 +119,7 @@
         <configuration>
           <target>1.5</target>
           <encoding>UTF-8</encoding>
+          <compilerArgument>-Xlint:all</compilerArgument>
         </configuration>
       </plugin>
 	  <!-- Configure JAR Plugin -->
@@ -167,10 +189,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>2.17</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.10.4</version>
         <configuration>
           <show>public</show>
           <excludePackageNames>jargs</excludePackageNames>
