--- a/pom.xml
+++ b/pom.xml
@@ -162,10 +162,27 @@
 	    <artifactId>maven-assembly-plugin</artifactId>
 	    <configuration>
 	      <appendAssemblyId>false</appendAssemblyId>
+        <archive>
+          <manifest>
+            <mainClass>com.googlecode.htmlcompressor.CmdLineCompressor</mainClass>
+          </manifest>
+        </archive>
+        <descriptorRefs>
+          <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
 	      <descriptors>
             <descriptor>src/main/assembly/distributive.xml</descriptor>
           </descriptors>
 	    </configuration>
+      <executions>
+        <execution>
+          <id>make-assembly</id> <!-- this is used for inheritance merges -->
+          <phase>package</phase> <!-- bind to the packaging phase -->
+          <goals>
+            <goal>single</goal>
+          </goals>
+        </execution>
+      </executions>
 	  </plugin>
 	  <!-- Configure Javadoc Plugin -->
 	  <plugin>
